objects/Cobj50__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>abcdef123__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cobj50</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Test1__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cobj50 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cobj50s</pluralLabel>
    <recordTypes>
        <fullName>RType1</fullName>
        <active>true</active>
        <label>RType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RType2</fullName>
        <active>false</active>
        <label>RType2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rtype3</fullName>
        <active>true</active>
        <label>Rtype3</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>